product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: cloudshop
    meta.helm.sh/release-namespace: cloudshop
  creationTimestamp: "2026-06-30T07:34:09Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: product-service
  namespace: cloudshop
  resourceVersion: "69626"
  uid: 43b18435-1cfa-4a41-a24d-29402997a480
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: product-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - image: product-service:v1
        imagePullPolicy: Never
        name: product-service
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-06-30T07:34:10Z"
    lastUpdateTime: "2026-06-30T07:34:10Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-06-30T07:34:09Z"
    lastUpdateTime: "2026-06-30T07:34:10Z"
    message: ReplicaSet "product-service-78f55f59bd" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
