order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: cloudshop
spec:
  selector:
    app: order-service
  ports:
  - name: http
    port: 80
    targetPort: 8000
  type: ClusterIP
