product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: cloudshop
  labels:
    app: product-service
spec:
  selector:
    app: product-service
  ports:
  - name: http
    port: 80
    targetPort: 8000
  type: ClusterIP
